--- a/scss/base/global.scss
+++ b/scss/base/global.scss
@@ -4,6 +4,7 @@
 @import 'reset';
 //@import 'normalize';
 @import 'config';
+@import 'typography';
 
 // Global features
 @import '../features/navigation';
