--- a/scss/base/_config.scss
+++ b/scss/base/_config.scss
@@ -1,3 +1,36 @@
 $color-dark: #333;
 $color-light: lighten($color-dark, 15%);
 $color-pale: #eee;
+
+
+/**
+* Header/nav size
+*/ 
+@mixin stickyNav($navHeight){
+	main[role="main"]{
+		padding-top:$navHeight;
+	}
+	header.site-header{
+		position:fixed;
+		width:100%;
+		height: $navHeight;
+		border-bottom:solid 1px red;
+	}
+}
+@mixin relativeNav(){
+	header.site-header{
+		position: relative;
+		width:100%;
+	}
+}
+//@include stickyNav(80px);
+@include relativeNav();
+
+/**
+* Breakpoints
+*/ 
+$navBreakPoint: 800px;
+$deviceSmall : 768px;
+$deviceMedium : 990px;
+$deviceDT: 1280px;
+$deviceLarge: 1400px;
