--- a/scss/views/_page-default.scss
+++ b/scss/views/_page-default.scss
@@ -14,3 +14,18 @@ main{
 	align-items:center;
 }
 
+article{
+	padding:2rem;
+	margin:1rem 0;
+	header{
+		width:100%;
+		margin-bottom: .5rem;
+	}
+	.article-body{
+		margin-bottom: .5rem;
+	}
+	footer{
+		width:100%;
+		border-top:solid 1px grey;
+	}
+}
