--- a/scss/base/_config.scss
+++ b/scss/base/_config.scss
@@ -2,19 +2,29 @@ $color-dark: #333;
 $color-light: lighten($color-dark, 15%);
 $color-pale: #eee;
 
+.screen-reader{
+	opacity:0;
+	position:absolute;
+	overflow:hidden;
+	z-index:-2;
+	height:0;
+	width:0;
+
+}
 
 /**
 * Header/nav size
 */ 
 @mixin stickyNav($navHeight){
-	main[role="main"]{
+	body{
 		padding-top:$navHeight;
 	}
 	header.site-header{
+		top:0;
 		position:fixed;
 		width:100%;
 		height: $navHeight;
-		border-bottom:solid 1px red;
+		z-index: 99;
 	}
 }
 @mixin relativeNav(){
@@ -24,7 +34,7 @@ $color-pale: #eee;
 	}
 }
 //@include stickyNav(80px);
-@include relativeNav();
+@include stickyNav(55px);
 
 /**
 * Breakpoints
