--- a/scss/views/_page-default.scss
+++ b/scss/views/_page-default.scss
@@ -1,6 +1,3 @@
-main{
-	padding:1em;
-}
 @mixin frowEqualHeight($justify){
 	display:flex;
 	flex-flow:row;
@@ -13,6 +10,31 @@ main{
 	justify-content: $justify;
 	align-items:center;
 }
+#logo{
+	display:inline-block;
+	width:50px;
+	height:50px;
+	float:left;
+	img{
+		width:inherit;
+		height: auto;
+		line-height: 1;
+		display: block;
+	}
+}
+#nav-toggle{
+	float:right;
+}
+header.site-header{
+
+	*{
+		color:white;
+	}
+}
+main{
+	padding:1rem;
+}
+
 
 article{
 	padding:2rem;
@@ -28,4 +50,10 @@ article{
 		width:100%;
 		border-top:solid 1px grey;
 	}
+}
+
+footer.site-footer{
+	width:100%;
+	padding:1rem;
+	background:#ddd;
 }
